docker and heroku app link added

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -39,7 +39,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: kaw393939/flaskbase
+          images: vs56/docker-flask
 
       - name: Build and push
         uses: docker/build-push-action@v2
